# whorlmap-paper

./: .gitignore  10-whorlmap.html  10-whorlmap.html.md  README.md  _quarto.yml  algorithm_panels.html  algorithm_panels.html.md  core.html  core.html.md  custom.css  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
nbs/: 10-whorlmap.ipynb  algorithm_panels.ipynb  assemble_figure1.py  figure1.html  figure1.ipynb  gen_all_panels.py  gen_panel_a.py  index.ipynb  nbdev.yml  run_survey.py  run_survey2.py
nbs/alternatives/: references.bib  spiral_variants.html  spiral_variants.ipynb  spiral_variants_executed.html  spiral_variants_executed.ipynb
nbs/gtex_data/: sample_meta.csv  survey.csv
nbs/helpers/: make_cache.html  make_cache.ipynb  survey.html  survey.ipynb
starting materials/: full.avif  lightbox.avif
whorlmap_paper/: _modidx.py  core.py
