[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "whorlmap-paper"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Sangyu Xu", email = "xusangyu@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/sangyu/whorlmap-paper"
Documentation = "https://sangyu.github.io/whorlmap-paper/"

[project.entry-points.nbdev]
whorlmap_paper = "whorlmap_paper._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "whorlmap_paper.__version__"}

[tool.setuptools.packages.find]
include = ["whorlmap_paper"]

[tool.nbdev]
